testsuite/poke.pkl/scons-diag-4.pk
/* { dg-do compile } */

deftype Foo = struct { int i; long j; };

defvar a = Foo { i = 10L }; /* { dg-error "" } */
